Merge changes from 1.0.22